examples/test/testpolicy3156.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3156
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key12: value35
      key38: value5
      key36: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value2
          key18: value44
      podSelector:
        matchLabels:
          key15: value23
          key31: value6
          key18: value38
